@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+XML:   Resolved issue CASTOR-1440 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed Configuration.loadProperties(String,String) to close resource streams after usage.
+       Details: http://jira.codehaus.org/browse/CASTOR-1440
+       (Werner - 20060601)
+
 XML:   Resolved issue CASTOR-1384 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with NPE related to field mappings without type declaration.
        Details: http://jira.codehaus.org/browse/CASTOR-1384
